--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/about-style.css">
     <title>About Us - Habit Tracker</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
 
     <footer role="contentinfo">
         <p>&copy; 2024 Habit Tracker. All rights reserved.</p>
-        <a href="index.html">Back to Habit Tracker</a>
+        <a href="index.html">Return to Habit Tracker</a>
     </footer>
 
 </body>
