--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>&copy; 2024 Habit Tracker. All rights reserved.</p>
         <a href="about.html">About Us</a>
     </footer>
-
+    <script src="save-script.js"></script>
     <script src="js/index-script.js"></script>
 </body>
 </html>
