about us page improvements

--- a/about.html
+++ b/about.html
@@ -3,19 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/about-style.css">
+    <link rel="stylesheet" href="css/index-style.css">
     <title>About Us - Habit Tracker</title>
 </head>
 <body>
 
     <header role="banner">
-        <h1>About Us</h1>
+        <div class="header-container">
+            <h1 class="habit-tracker-heading">About Us</h1>
+        </div>
     </header>
 
     <main role="main">
         <section class="about-content">
-            <p>Welcome to Habit Tracker, where we help you build and maintain positive habits for a healthier and happier life.</p>
-            <p>If you have any questions or feedback, feel free to reach out to us.</p>
+            <p>Welcome to Habit Tracker, your personalized tool for cultivating positive habits and transforming your life.</p>
+            <p>We believe in the power of consistent, positive behaviors to enhance well-being and happiness. Our platform is designed to assist you in building and maintaining these habits effortlessly.</p>
+            <p>Key Features:</p>
+            <ul>
+                <li>Custom Habit Tracking: Tailor your habit tracking to match your unique goals and aspirations.</li>
+            </ul>
+            <p>Start your journey towards a healthier and happier life with Habit Tracker today!</p>
+            <p>If you have any questions, suggestions, or just want to share your success stories, feel free to reach out to us. We love hearing from our users!</p>
+        </section>
+
+        <section class="todo-list">
+            <h2>Project To-Do List</h2>
+            <ul>
+                <li>Progress Insights</li>
+                <li>Fix colorblindness button</li>
+                <li>Fix speech to text button</li>
+                <li>Add text to speech button, the user can highlight text and it will read it outloud</li>
+                <li>Add a contact us page</li>
+                <!-- Add more to-do items as needed -->
+            </ul>
         </section>
     </main>
 
