more features and todos added

--- a/about.html
+++ b/about.html
@@ -21,6 +21,9 @@
             <p>Key Features:</p>
             <ul>
                 <li>Custom Habit Tracking: Tailor your habit tracking to match your unique goals and aspirations.</li>
+                <li>Remove All Habits: Users can easily remove all their habits via the accessibility dropdown menu.</li>
+                <li>Random Motivational Quotes: add text here...</li>
+                <li>User Habits Are Locally Saved: add text here...</li>
             </ul>
             <p>Start your journey towards a healthier and happier life with Habit Tracker today!</p>
             <p>If you have any questions, suggestions, or just want to share your success stories, feel free to reach out to us. We love hearing from our users!</p>
@@ -34,6 +37,7 @@
                 <li>Fix speech to text button</li>
                 <li>Add text to speech button, the user can highlight text and it will read it outloud</li>
                 <li>Add a contact us page</li>
+                <li>Add page icons or images</li>
                 <!-- Add more to-do items as needed -->
             </ul>
         </section>
